// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion renders collapsed by default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative bg-transparent text-[1rem] text-graphite before:content-[""] before:absolute before:left-0 before:right-0 before:h-[1px] before:bg-gray before:-top after:content-[""] after:absolute after:left-0 after:right-0 after:-bottom after:h-[1px] after:bg-gray [[data-component"
      data-component-type="accordion"
      data-orientation="vertical"
      dir="ltr"
      role="region"
    >
      <div
        data-closed=""
        data-index="0"
        data-orientation="vertical"
      >
        <div
          data-closed=""
          data-index="0"
          data-orientation="vertical"
        >
          <div
            aria-expanded="false"
            class="relative flex items-center select-none cursor-pointer outline-none py-[0.5625em] px-0 font-semibold text-black data-disabled:pointer-events"
            data-component-type="accordion-summary"
            data-orientation="vertical"
            data-value=""
            id="base-ui-:r2:"
            role="button"
            tabindex="0"
          >
            <div
              class="flex grow flex-row items-center justify-between m-0 text-[0.875em] leading-[1.5em]"
              data-component-type="accordion-summary-content"
            >
              <div
                class="text-black"
                data-testid="accordion-summary"
              >
                What is a dog?
              </div>
              <div
                class="flex items-center h-[1.5em] self-start"
              >
                <button
                  aria-disabled="false"
                  class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm"
                  data-component-type="button"
                  role="button"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="items-center inline-flex font-semibold text-blue text-md"
                  >
                    <svg
                      class="fill-current inline-block align-[-.125em] flex-1 w-4 h-4 text-[0.7em] text-graphite transition-transform duration-150 ease-in"
                      style="min-width: 16px; min-height: 16px;"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="base-ui-:r2:"
          class="overflow-hidden h-[var(--accordion-panel transition-[height] duration-[var(--accordion ease-in data-starting-style:h data-ending-style:h [&[hidden]]:block [&[hidden]]:h-0 [&[hidden]]:invisible"
          data-closed=""
          data-index="0"
          data-orientation="vertical"
          hidden=""
          id="base-ui-:r1:"
          role="region"
          style="--accordion-panel-height: auto; --accordion-panel-width: auto; --accordion-duration: 300ms;"
        >
          <div
            class="flex p-0"
          >
            <div
              class="text-[0.875em] font-regular leading-[1.5em] mb-[0.75em] text-graphite"
              data-testid="accordion-details"
            >
              A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders custom icon when passed 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative bg-transparent text-[1rem] text-graphite before:content-[""] before:absolute before:left-0 before:right-0 before:h-[1px] before:bg-gray before:-top after:content-[""] after:absolute after:left-0 after:right-0 after:-bottom after:h-[1px] after:bg-gray [[data-component"
      data-component-type="accordion"
      data-orientation="vertical"
      dir="ltr"
      role="region"
    >
      <div
        data-closed=""
        data-index="0"
        data-orientation="vertical"
      >
        <div
          data-closed=""
          data-index="0"
          data-orientation="vertical"
        >
          <div
            aria-expanded="false"
            class="relative flex items-center select-none cursor-pointer outline-none py-[0.5625em] px-0 font-semibold text-black data-disabled:pointer-events"
            data-component-type="accordion-summary"
            data-orientation="vertical"
            data-value=""
            id="base-ui-:rh:"
            role="button"
            tabindex="0"
          >
            <div
              class="flex grow flex-row items-center justify-between m-0 text-[0.875em] leading-[1.5em]"
              data-component-type="accordion-summary-content"
            >
              <div
                class="text-black"
                data-testid="accordion-summary"
              >
                What is a dog?
              </div>
              <button
                aria-disabled="false"
                class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm"
                data-component-type="button"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="items-center inline-flex font-semibold text-blue text-md"
                >
                  <span
                    class="flex-1 w-4 h-4 text-[0.7em] text-graphite transition-transform duration-150 ease-in"
                    data-testid="custom-expand-icon"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="base-ui-:rh:"
          class="overflow-hidden h-[var(--accordion-panel transition-[height] duration-[var(--accordion ease-in data-starting-style:h data-ending-style:h [&[hidden]]:block [&[hidden]]:h-0 [&[hidden]]:invisible"
          data-closed=""
          data-index="0"
          data-orientation="vertical"
          hidden=""
          id="base-ui-:rg:"
          role="region"
          style="--accordion-panel-height: auto; --accordion-panel-width: auto; --accordion-duration: 300ms;"
        >
          <div
            class="flex p-0"
          >
            <div
              class="text-[0.875em] font-regular leading-[1.5em] mb-[0.75em] text-graphite"
              data-testid="accordion-details"
            >
              A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative bg-transparent text-[1rem] text-graphite before:content-[""] before:absolute before:left-0 before:right-0 before:h-[1px] before:bg-gray before:-top after:content-[""] after:absolute after:left-0 after:right-0 after:-bottom after:h-[1px] after:bg-gray [[data-component"
      data-component-type="accordion"
      data-disabled=""
      data-orientation="vertical"
      dir="ltr"
      role="region"
    >
      <div
        data-closed=""
        data-disabled=""
        data-index="0"
        data-orientation="vertical"
      >
        <div
          data-closed=""
          data-disabled=""
          data-index="0"
          data-orientation="vertical"
        >
          <div
            aria-disabled="true"
            aria-expanded="false"
            class="relative flex items-center select-none cursor-pointer outline-none py-[0.5625em] px-0 font-semibold text-black data-disabled:pointer-events"
            data-component-type="accordion-summary"
            data-disabled=""
            data-orientation="vertical"
            data-value=""
            id="base-ui-:rb:"
            role="button"
            tabindex="0"
          >
            <div
              class="flex grow flex-row items-center justify-between m-0 text-[0.875em] leading-[1.5em]"
              data-component-type="accordion-summary-content"
            >
              <div
                class="text-black"
                data-testid="accordion-summary"
              >
                What is a dog?
              </div>
              <div
                class="flex items-center h-[1.5em] self-start"
              >
                <button
                  aria-disabled="false"
                  class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm"
                  data-component-type="button"
                  role="button"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="items-center inline-flex font-semibold text-blue text-md"
                  >
                    <svg
                      class="fill-current inline-block align-[-.125em] flex-1 w-4 h-4 text-[0.7em] text-graphite transition-transform duration-150 ease-in"
                      style="min-width: 16px; min-height: 16px;"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="base-ui-:rb:"
          class="overflow-hidden h-[var(--accordion-panel transition-[height] duration-[var(--accordion ease-in data-starting-style:h data-ending-style:h [&[hidden]]:block [&[hidden]]:h-0 [&[hidden]]:invisible"
          data-closed=""
          data-disabled=""
          data-index="0"
          data-orientation="vertical"
          hidden=""
          id="base-ui-:ra:"
          role="region"
          style="--accordion-panel-height: auto; --accordion-panel-width: auto; --accordion-duration: 300ms;"
        >
          <div
            class="flex p-0"
          >
            <div
              class="text-[0.875em] font-regular leading-[1.5em] mb-[0.75em] text-graphite"
              data-testid="accordion-details"
            >
              A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
